# engenharia

./: .gitignore  README.md  accountsTypes.ts  igcTypes.ts  shpTypes.ts
backend/src/: .env  pyproject.toml
backend/src/accounts/: admin.py  apps.py  permissions.py  serializers.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py
backend/src/core/: admin.py  error_handling.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/src/core/migrations/: 0001_initial.py
backend/src/igc/: admin.py  apps.py  calculate.py  dataclasses.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/src/igc/migrations/: 0001_initial.py  0002_auto_20230801_2002.py  0003_remove_gas_start_pressure.py  0004_auto_20231009_1735.py  0005_auto_20231011_1653.py
backend/src/igc/templatetags/: igc_extras.py
backend/src/shp/: admin.py  calculate copy 2.py  calculate copy.py  calculate.py  constants.py  dataclasses.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/src/shp/migrations/: 0001_initial.py  0002_auto_20220527_1602.py  0003_auto_20220527_2052.py  0004_auto_20220527_2057.py  0005_auto_20220528_2357.py  0006_auto_20220529_0411.py  0007_auto_20220530_1340.py  0008_auto_20220530_1507.py  0009_auto_20220530_1546.py  0010_auto_20220530_2254.py  0011_rename_fixtures_fixture.py  0012_auto_20220531_0147.py  0013_alter_fixture_fittings.py  0014_auto_20220602_0000.py  0015_auto_20220608_1233.py  0016_auto_20220608_2123.py  0017_auto_20220612_1959.py  0018_auto_20220614_1722.py  0021_config.py  (+2 more)
(+182 files in other folders)
