[project]
name = "engenharia"
version = "2.0.0"
description = "Fire hydrant and Gas distribution sizing application."
readme = "README.md"
authors = [{name = "Jonas Burigo", email = "jonas@jonasbm.com.br"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Civil Engineers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet"
]
requires-python = ">=3.10"
urls = { homepage = "https://github.com/JonasBM/engenharia" }

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/psf/black",
        rev = "20.8b1",
        hooks = [{id = "black", language_version = "python3.10"}]
    },
    {
        repo = "https://github.com/pycqa/isort",
        rev = "5.6.4",
        hooks = [{id = "isort", language_version = "python3.10"}]
    }
]